fix: wrap input

--- a/style.css
+++ b/style.css
@@ -260,10 +260,10 @@ body {
     justify-content: flex-start;
     display: flex;
     margin: 40px 0px;
-    gap: 75px;
+    gap: 54px;
 }
 .favorites__ul li {
-    width: 120px;
+    width: 140px;
 }
 .favorites__label {
     margin-left: 17px;
@@ -943,5 +943,11 @@ body {
     .about__photo-container-min span {
         cursor: pointer;
         margin-top: 35px;
+    }
+}
+@media (max-width: 685px ){
+    .favorites__ul{
+        flex-wrap: wrap;
+        justify-content: center;
     }
 }
